# proked

./: .gitignore  CMakeLists.txt  README.md  program.prk
include/: lexeme.hxx  main.hxx  parseme.hxx
src/: config.hxx.in  main.cxx
